add projects separate from blogs

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -9,6 +9,7 @@ import ThemeIcon from './ThemeIcon.astro';
     <p>Software Engineer / Learner / Human</p>
     <nav>
         <a href="/glass-mirror/">Home</a>
+        <a href="/glass-mirror/projects">Projects</a>
         <a href="/glass-mirror/blog">Blog</a>
     </nav>
 </header>
