add resume cv page

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -12,6 +12,7 @@ import ThemeIcon from './ThemeIcon.astro';
         <a href="/glass-mirror/projects">Projects</a>
         <a href="/glass-mirror/blog">Blog</a>
         <a href="/glass-mirror/tils">TILs</a>
+        <a href="/glass-mirror/cv" target="_blank">Resume</a>
     </nav>
 </header>
 
