--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ const pageTitle = "Glass Mirror";
         </p>
         
         <div class="cta-container">
-            <a href="/glass-mirror/cv" class="btn-primary">View Full Resume</a>
+            <a href="/glass-mirror/cv" class="btn-primary" target="_blank">View Full Resume</a>
         </div>
     </section>
 
